# LumiPlayer

./: .gitignore  NATIVE_SETUP.md  PRISMA_EXAMPLE.md  README.md  electron-builder.json5  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/electron-main/: electron-env.d.ts  main.ts  preload.ts
apps/electron-main/ipc/: nativeIpc.ts  testIpc.ts
apps/electron-main/window/: createWindow.ts
apps/renderer/: index.html
apps/renderer/src/: App.vue  main.ts
apps/renderer/src/api/: native.ts
apps/renderer/src/components/: TestDatabase.vue
apps/renderer/src/components/explorer/: CustomBar.vue  FileExplorer.vue
apps/renderer/src/components/player/: ControlBar.vue  Player.vue  ProgressBar.vue  Slider.vue
apps/renderer/src/store/: playerStore.ts
apps/renderer/src/views/: Home.vue
doc/: 文件结构.md
native/: CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json
native/src/: Database.cc  Database.h  FileExplorer.cc  FileExplorer.h  addon.cc  hello.cc  hello.h
prisma/: schema.prisma
prisma/migrations/20260310140328_init/: migration.sql
